--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,6 +324,10 @@ footer {
 }
 
 @media only screen and (min-width: 500px) and (max-width: 768px) {
+    body {
+    background-size: cover;
+    background: url("/assets/images/background-image.png") fixed center no-repeat;
+}
     .navigation {
         display: flex;
     }
@@ -461,6 +465,10 @@ footer {
 }
 
 @media only screen and (max-width: 500px) {
+    body {
+    background-size: cover;
+    background: url("/assets/images/background-image.png") fixed center no-repeat;
+}
     .navigation {
         display: flex;
     }
