--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,3 +1,7 @@
+body {
+    background-size: cover;
+    background: url("/assets/images/background-image.png") fixed center no-repeat;
+}
 /* Styles for the overall gallery container */
 .gallery {
     margin-top: 70px;
