--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,11 @@
 
 /* Page body styles */
 body {
-   background: linear-gradient(rgba(25, 29, 35, 0.8), rgba(25, 29, 35, 0.8)),
-      url("/assets/images/background-image.png");
-    background-position: center;
+  body {
+    background: linear-gradient(rgba(25, 29, 35, 0.9), rgba(25, 29, 35, 0.9)), url("/assets/images/background-image.png") fixed center no-repeat;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+}
+
 }
 
 .navigation ion-icon {
