--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,6 +1,7 @@
 body {
+
+    background: linear-gradient(rgba(25, 29, 35, 0.85), rgba(25, 29, 35, 0.85)), url("/assets/images/background-image.png") fixed center no-repeat;
     background-size: cover;
-    background: url("/assets/images/background-image.png") fixed center no-repeat;
 }
 /* Styles for the overall gallery container */
 .gallery {
