--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -92,9 +92,9 @@ footer {
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
-  body {
+ body {
+    background: linear-gradient(rgba(25, 29, 35, 0.85), rgba(25, 29, 35, 0.85)), url("/assets/images/background-image.png") fixed center no-repeat;
     background-size: cover;
-    background: url("/assets/images/background-image.png") fixed center no-repeat;
 }
     .gallery-title h1 {
         font-size: 30px;
@@ -111,9 +111,9 @@ footer {
 }
 
 @media only screen and (min-width: 500px) and (max-width: 768px) {
-    body {
+   body {
+    background: linear-gradient(rgba(25, 29, 35, 0.85), rgba(25, 29, 35, 0.85)), url("/assets/images/background-image.png") fixed center no-repeat;
     background-size: cover;
-    background: url("/assets/images/background-image.png") fixed center no-repeat;
 }
     .gallery-title h1 {
         font-size: 30px;
@@ -185,9 +185,9 @@ footer {
 }
 
 @media only screen and (max-width: 500px) {
-   body {
+  body {
+    background: linear-gradient(rgba(25, 29, 35, 0.85), rgba(25, 29, 35, 0.85)), url("/assets/images/background-image.png") fixed center no-repeat;
     background-size: cover;
-    background: url("/assets/images/background-image.png") fixed center no-repeat;
 }
     .gallery-title h1 {
         font-size: 20px;
